<resources>
    <string name="app_name">CodigoTest2</string>
    <string name="furama_riverfront_singapore">Furama Riverfront,\n Singapore</string>
    <string name="_405_havelock_road_singapore_169633">405 Havelock Road,Singapore 169633</string>
    <string name="see_all_2_68">See All 2/68</string>
    <string name="view_rates">View Rates</string>
    <string name="by_room">By Room</string>
    <string name="by_rates">By Rates</string>
    <string name="your_e_voucher_rate">Your E-Voucher Rate</string>
    <string name="mobile_app_special_voucher">Mobile App Special Voucher</string>
    <string name="_20_off_in_room_service">20% off\nIn-Room Service.</string>
    <string name="inclusive_of_breakfast">Inclusive of\n Breakfast</string>
    <string name="avg_nightly_room_form">Avg. Nightly / Room Form</string>
    <string name="member_deals">Member Deals</string>
</resources>